layout.less: Fix footer alignment, when `.sidebar-collapsed

--- a/public/css/icinga/layout.less
+++ b/public/css/icinga/layout.less
@@ -8,6 +8,10 @@
   z-index: 999;
 }
 
+.sidebar-collapsed #footer {
+  left: 3em;
+}
+
 #guest-error {
   background-color: @icinga-blue;
   height: 100%;
